--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -18,42 +18,18 @@
 <div class="main-content">
     <div class="wrapper card" data-anchor="main-content">
         <header>
-            <h1>Starter Kit</h1>
+            <h1>Machine-learning chat</h1>
         </header>
-        <article>
-            <p>A book is a set of sheets of paper, parchment, or similar materials that are fastened together to hinge
-                at
-                one side. A single sheet within a book is a leaf, and each side of a leaf is a page. Writing or images
-                can
-                be printed or drawn on a book's pages. An electronic image that is formatted to resemble a book on a
-                computer screen, smartphone or e-reader device is known as an electronic book or e-book.</p>
-            <p>The term "books" may also refer to a body of works of literature, or a main division of literature (e.g.,
-                children's literature) . In library and information science, a book is called a monograph, to
-                distinguish it
-                from serial periodicals such as magazines, journals, or newspapers. In novels and sometimes other types
-                of
-                books (for example, biographies), a book may be divided into several large sections, also called books
-                (Book
-                1, Book 2, Book 3, and so on). An avid reader or collector of books or a book lover is a bibliophile or
-                colloquially, "bookworm".</p>
-            <p>A shop where books are bought and sold is a bookshop or bookstore. Books are also sold in some department
-                stores, drugstores and newspaper vendors. Books can also be borrowed from libraries. Google has
-                estimated
-                that as of 2010, approximately 130,000,000 distinct titles had been published.[1] In some wealthier
-                nations,
-                the sale of printed books has decreased because of the use of e-books,[2] though sales of e-books
-                declined
-                in the first half of 2015.</p>
-            <p>Paragraph with time:
-                <small data-processors="time">0</small>
-            </p>
-            <h3>Links demo</h3>
-            <nav>
-                <a href="/?v=native">Link native</a>
-                <a href="/?v=dynamic" data-processors="link">Link dynamic</a>
-                <a href="?popup=popup-demo-content.html" data-processors="link">Open popup</a>
-            </nav>
-        </article>
+        <div class="row">
+            <article class="col">
+                <h3>User chat</h3>
+                <div data-processors="chat" data-processor-chat='"user"'></div>
+            </article>
+            <article class="col">
+                <h3>Admin chat</h3>
+                <div data-processors="chat" data-processor-chat='"admin"'></div>
+            </article>
+        </div>
     </div>
 </div>
 <footer>
